--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -66,12 +66,18 @@ cache {
 
 user-sys {
     enabled = false
-    googleClientId= ""
+    googleClientId = ""
     version-time-limit-in-minutes = 60
     jwt {
         exp-in-days = 30
         256-bit-secret = random
     }
+}
+
+jdbc {
+    url = "jdbc:mysql://localhost:3306/texera_db?serverTimezone=UTC"
+    username = ""
+    password = ""
 }
 
 web-server {
