--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -83,6 +83,7 @@
     "ngx-markdown": "13.1.0",
     "ngx-monaco-editor": "9.0.0",
     "ngx-popper": "7.0.0",
+    "path-browserify": "^1.0.1",
     "popper.js": "1.16.1",
     "quill": "1.3.7",
     "quill-cursors": "3.1.2",
