--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -39,7 +39,6 @@
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
     "@ngneat/until-destroy": "8.1.4",
     "@ngx-formly/core": "6.1.8",
-    "@ngx-formly/material": "6.1.8",
     "@ngx-formly/ng-zorro-antd": "6.1.8",
     "@ngx-formly/schematics": "6.1.8",
     "@types/lodash-es": "4.17.4",
@@ -73,7 +72,7 @@
     "monaco-languageclient": "3.0.0",
     "ng-dynamic-component": "10.1.0",
     "ng-zorro-antd": "13.2.2",
-    "ng2-file-upload": "1.4.0",
+    "ng2-file-upload": "2.0.0-3",
     "ngx-bootstrap": "5.6.2",
     "ngx-color-picker": "12.0.1",
     "ngx-json-viewer": "3.0.2",
