--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -19,7 +19,7 @@
     "format:ci": "yarn prettier-eslint --list-different \"src/**/*.{ts,js,html,scss,less,json}\" && yarn eslint ./src",
     "e2e": "ng e2e",
     "preinstall": "",
-    "postinstall": "node git-version.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && yarn --cwd node_modules/@danmarshall/deckgl-typings run postinstall && node ./decorate-angular-cli.js"
+    "postinstall": "node git-version.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +35,8 @@
     "@angular/platform-browser-dynamic": "13.3.9",
     "@angular/router": "13.3.9",
     "@auth0/angular-jwt": "5.1.0",
-    "@danmarshall/deckgl-typings": "4.9.15",
+    "@deck.gl/layers": "~8.9.19",
+    "@deck.gl/mapbox": "~8.9.19",
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
     "@ngneat/until-destroy": "8.1.4",
     "@ngx-formly/core": "5.11.1",
@@ -52,7 +53,7 @@
     "d3": "6.7.0",
     "d3-cloud": "1.2.5",
     "dagre": "0.8.5",
-    "deck.gl": "8.7.0",
+    "deck.gl": "~8.9.19",
     "deep-map": "2.0.0",
     "edit-distance": "1.0.4",
     "es6-weak-map": "2.0.3",
