--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "~13.3.9",
     "@angular/router": "~13.3.9",
     "@auth0/angular-jwt": "5.1.0",
+    "@deck.gl/core": "~8.9.19",
     "@deck.gl/layers": "~8.9.19",
     "@deck.gl/mapbox": "~8.9.19",
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
@@ -44,7 +45,7 @@
     "@ngx-formly/ng-zorro-antd": "0.0.1",
     "@ngx-formly/schematics": "5.11.1",
     "@types/lodash-es": "4.17.4",
-    "@types/mapbox-gl": "2.6.3",
+    "@types/mapbox-gl": "~2.7.11",
     "@types/marked": "4.0.8",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
@@ -68,7 +69,7 @@
     "json-ref-lite": "1.1.0",
     "jszip": "3.10.1",
     "lodash-es": "4.17.21",
-    "mapbox-gl": "2.7.0",
+    "mapbox-gl": "~2.15.0",
     "marked": "4.2.12",
     "monaco-editor": "0.34.0",
     "monaco-languageclient": "3.0.0",
