--- a/core/amber/requirements.txt
+++ b/core/amber/requirements.txt
@@ -8,7 +8,7 @@ loguru==0.7.0
 pyarrow==12.0.1
 pytest==7.4.0
 python-dateutil==2.8.1
-pytest-timeout==1.4.2
+pytest-timeout
 protobuf==3.19.5
 betterproto~=2.0.0b3
 typing~=3.7.4.3
