--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -147,7 +147,7 @@
     "jasmine-spec-reporter": "5.0.2",
     "karma": "6.3.17",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "^2.2.1",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
     "ngx-pipes": "3.0.0",
