--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -109,11 +109,10 @@
     "@angular/cli": "~13.3.9",
     "@angular/compiler-cli": "~13.3.9",
     "@angular/language-service": "~13.3.9",
-    "@nrwl/cli": "13.8.5",
-    "@nrwl/cypress": "13.8.5",
-    "@nrwl/nx-cloud": "13.1.6",
-    "@nrwl/tao": "13.8.5",
-    "@nrwl/workspace": "13.8.5",
+    "@nrwl/cli": "14.0.0",
+    "@nrwl/cypress": "14.0.0",
+    "@nrwl/nx-cloud": "16.1.1",
+    "@nrwl/workspace": "14.0.0",
     "@types/backbone": "1.4.15",
     "@types/c3": "0.7.8",
     "@types/d3": "6.7.5",
@@ -159,7 +158,8 @@
     "sass": "1.49.9",
     "ts-node": "4.1.0",
     "typescript": "4.5.5",
-    "webpack-bundle-analyzer": "4.5.0"
+    "webpack-bundle-analyzer": "4.5.0",
+    "nx": "14.0.0"
   },
   "browserslist": [
     "defaults",
