revert typescript to 4.6.4

--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -129,8 +129,8 @@
     "@types/lodash": "4.14.179",
     "@types/quill": "2.0.9",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "~6.1.0",
-    "@typescript-eslint/parser": "~6.1.0",
+    "@typescript-eslint/eslint-plugin": "5.14.0",
+    "@typescript-eslint/parser": "5.14.0",
     "concurrently": "7.4.0",
     "cypress": "9.5.1",
     "eslint": "8.29.0",
@@ -157,7 +157,7 @@
     "rxjs-marbles": "7.0.1",
     "sass": "1.49.9",
     "ts-node": "4.1.0",
-    "typescript": "4.7.4",
+    "typescript": "4.6.4",
     "webpack-bundle-analyzer": "4.5.0",
     "nx": "14.4.6"
   },
