--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -65,7 +65,7 @@ cache {
 }
 
 user-sys {
-    enabled = false
+    enabled = true
     googleClientId = ""
     version-time-limit-in-minutes = 60
     jwt {
@@ -76,8 +76,8 @@ user-sys {
 
 jdbc {
     url = "jdbc:mysql://localhost:3306/texera_db?serverTimezone=UTC"
-    username = ""
-    password = ""
+    username = "root"
+    password = "01281016"
 }
 
 web-server {
