--- a/core/amber/src/main/resources/python_udf.conf
+++ b/core/amber/src/main/resources/python_udf.conf
@@ -1,6 +1,6 @@
 python {
     # python3 executable path
-    path = ""
+    path = "c:\\Users\\yuanz\\AppData\\Local\\Programs\\Python\\Python310\\python.exe"
 
     log {
         streamHandler {
