Reverting local machine changes

--- a/core/amber/src/main/resources/python_udf.conf
+++ b/core/amber/src/main/resources/python_udf.conf
@@ -1,6 +1,6 @@
 python {
     # python3 executable path
-    path = "C:/Program Files/Python38/python.exe"
+    path = ""
 
     log {
         streamHandler {
