--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -65,7 +65,7 @@ cache {
 }
 
 user-sys {
-    enabled = true
+    enabled = false
     googleClientId = ""
     version-time-limit-in-minutes = 60
     jwt {
@@ -76,8 +76,8 @@ user-sys {
 
 jdbc {
     url = "jdbc:mysql://localhost:3306/texera_db?serverTimezone=UTC"
-    username = "root"
-    password = "1016955Jt"
+    username = ""
+    password = ""
 }
 
 web-server {
