--- a/core/amber/src/main/resources/python_udf.conf
+++ b/core/amber/src/main/resources/python_udf.conf
@@ -1,6 +1,6 @@
 python {
     # python3 executable path
-    path = ""
+    path = "/Users/kmohanty/opt/anaconda3/bin/python"
 
     log {
         streamHandler {
