actually this one is the important one

--- a/core/amber/src/main/resources/python_udf.conf
+++ b/core/amber/src/main/resources/python_udf.conf
@@ -1,6 +1,6 @@
 python {
     # python3 executable path
-    path = ""
+    path = "C:/Users/vthai/AppData/Local/Programs/Python/Python311/python.exe"
 
     log {
         streamHandler {
