--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -45,8 +45,11 @@
     "@ngx-formly/material": "5.11.1",
     "@ngx-formly/ng-zorro-antd": "0.0.1",
     "@ngx-formly/schematics": "5.11.1",
-    "@nrwl/angular": "14.1.11",
-    "@nrwl/nx-cloud": "^16.1.1",
+    "@nrwl/angular": "14.4.6",
+    "@nrwl/cli": "14.4.6",
+    "@nrwl/cypress": "14.4.6",
+    "@nrwl/nx-cloud": "16.1.1",
+    "@nrwl/workspace": "14.4.6",
     "@stoplight/json-ref-resolver": "3.1.5",
     "@types/lodash-es": "4.17.4",
     "@types/mapbox-gl": "~2.7.11",
@@ -151,8 +154,7 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "ngx-pipes": "3.0.0",
     "nodecat": "2.0.0",
-    "nx": "14.1.11",
-    "nx-cloud": "14.7.0",
+    "nx": "14.4.6",
     "nz-tslint-rules": "0.901.2",
     "prettier": "2.8.8",
     "prettier-eslint-cli": "7.1.0",
