--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -27,9 +27,8 @@ reshape {
 }
 
 flow-control {
-    credit-based-flow-control-enabled = true
-    unprocessed-batches-size-limit-in-bytes-per-worker-pair = 1600000000
-    credit-poll-request-delay-in-ms = 10
+    max-credit-allowed-in-bytes-per-channel = 1600000000  # -1 to disable flow control
+    credit-poll-interval-in-ms = 200
 }
 
 scheduling {
