--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -27,7 +27,7 @@ reshape {
 }
 
 flow-control {
-    max-credit-allowed-in-bytes-per-channel = 20000  # -1 to disable flow control
+    max-credit-allowed-in-bytes-per-channel = 16000000  # -1 to disable flow control
     credit-poll-interval-in-ms = 200
 }
 
