--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -1,7 +1,6 @@
 constants {
     logging-queue-size-interval = 30000
-    num-worker-per-node = 2
-    data-volume-per-node = 10
+    num-worker-per-operator = 2
     max-resolution-rows = 2000
     max-resolution-columns = 2000
     status-update-interval = 500
