Create a new component that displays line chart from chart.js

--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -53,6 +53,7 @@
     "backbone": "1.4.1",
     "bootstrap": "~4.6.2",
     "c3": "0.7.17",
+    "chart.js": "^4.4.1",
     "d3": "6.7.0",
     "d3-cloud": "1.2.5",
     "dagre": "0.8.5",
@@ -115,6 +116,7 @@
     "@nrwl/workspace": "14.4.6",
     "@types/backbone": "1.4.15",
     "@types/c3": "0.7.8",
+    "@types/chart.js": "4.4.1",
     "@types/d3": "6.7.5",
     "@types/d3-cloud": "1.2.5",
     "@types/dagre": "0.7.47",
