--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -91,8 +91,9 @@ web-server {
 }
 
 fault-tolerance {
-    enable-determinant-logging = false
-    log-storage-root-folder-uri = ""
+    # URI for storage, empty to disable logging.
+    # e.g. use "file:///recovery-log/" for local logging.
+    log-storage-uri = ""
     log-flush-interval-ms = 0 # immediately flush
     log-record-max-size-in-byte = 67108864 #64MB
     # limit for resend buffer length, if the resend buffer
