--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -49,11 +49,11 @@
     "@types/lodash-es": "4.17.4",
     "@types/mapbox-gl": "~2.7.11",
     "@types/marked": "4.0.8",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
     "bootstrap": "~4.6.2",
     "c3": "0.7.17",
-    "chart.js": "^4.4.1",
     "d3": "6.7.0",
     "d3-cloud": "1.2.5",
     "dagre": "0.8.5",
@@ -83,6 +83,7 @@
     "ngx-monaco-editor": "9.0.0",
     "ngx-popper": "7.0.0",
     "path-browserify": "^1.0.1",
+    "plotly.js-dist-min": "^2.27.1",
     "popper.js": "1.16.1",
     "quill": "1.3.7",
     "quill-cursors": "3.1.2",
@@ -116,7 +117,6 @@
     "@nrwl/workspace": "14.4.6",
     "@types/backbone": "1.4.15",
     "@types/c3": "0.7.8",
-    "@types/chart.js": "4.4.1",
     "@types/d3": "6.7.5",
     "@types/d3-cloud": "1.2.5",
     "@types/dagre": "0.7.47",
