--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -12,7 +12,7 @@ monitoring {
 }
 
 reshape {
-    skew-handling-enabled = true
+    skew-handling-enabled = false
     skew-detection-initial-delay-ms = 5000
     skew-detection-interval-ms = 3000
     eta-threshold = 100
