--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -7,7 +7,7 @@ constants {
 }
 
 monitoring {
-    monitoring-enabled = true
+    monitoring-enabled = false
     monitoring-interval-ms = 3000
 }
 
