--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -22,24 +22,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.9",
-    "@angular/cdk": "~13.3.9",
-    "@angular/common": "~13.3.9",
-    "@angular/compiler": "~13.3.9",
-    "@angular/core": "~13.3.9",
-    "@angular/forms": "~13.3.9",
-    "@angular/localize": "~13.3.9",
-    "@angular/material": "~13.3.9",
-    "@angular/platform-browser": "~13.3.9",
-    "@angular/platform-browser-dynamic": "~13.3.9",
-    "@angular/router": "~13.3.9",
+    "@angular/animations": "~14.1.0",
+    "@angular/cdk": "~14.1.0",
+    "@angular/common": "~14.1.0",
+    "@angular/compiler": "~14.1.0",
+    "@angular/core": "~14.1.0",
+    "@angular/forms": "~14.1.0",
+    "@angular/localize": "~14.1.0",
+    "@angular/material": "~14.1.0",
+    "@angular/platform-browser": "~14.1.0",
+    "@angular/platform-browser-dynamic": "~14.1.0",
+    "@angular/router": "~14.1.0",
     "@auth0/angular-jwt": "5.1.0",
     "@deck.gl/core": "~8.9.19",
     "@deck.gl/layers": "~8.9.19",
     "@deck.gl/mapbox": "~8.9.19",
     "@loaders.gl/core": "~3.4.2",
     "@luma.gl/core": "~8.5.20",
-    "@ng-bootstrap/ng-bootstrap": "~11.0.1",
+    "@ng-bootstrap/ng-bootstrap": "~13.1.1",
+    "bootstrap": "~5.2.0",
+    "@popperjs/core": "2.10.2",
     "@ngneat/until-destroy": "8.1.4",
     "@ngx-formly/core": "5.11.1",
     "@ngx-formly/material": "5.11.1",
@@ -50,7 +52,6 @@
     "@types/plotly.js-dist-min": "^2.3.4",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
-    "bootstrap": "~4.6.2",
     "c3": "0.7.17",
     "d3": "6.7.0",
     "d3-cloud": "1.2.5",
@@ -70,15 +71,16 @@
     "lodash-es": "4.17.21",
     "mapbox-gl": "~2.15.0",
     "marked": "4.2.12",
-    "monaco-editor": "0.34.0",
+    "monaco-editor": "0.33.0",
+    "ngx-monaco-editor-v2": "14.0.4",
     "monaco-languageclient": "3.0.0",
+    "y-monaco": "0.1.4",
     "ng-dynamic-component": "10.1.0",
-    "ng-zorro-antd": "13.4.0",
+    "ng-zorro-antd": "14.0.0",
     "ng2-file-upload": "1.4.0",
     "ngx-color-picker": "12.0.1",
     "ngx-json-viewer": "3.0.2",
     "ngx-markdown": "13.1.0",
-    "ngx-monaco-editor": "9.0.0",
     "path-browserify": "^1.0.1",
     "plotly.js-dist-min": "^2.27.1",
     "popper.js": "1.16.1",
@@ -90,7 +92,6 @@
     "tslib": "2.3.1",
     "uuid": "8.3.2",
     "vscode-ws-jsonrpc": "1.0.1",
-    "y-monaco": "0.1.4",
     "y-protocols": "1.0.5",
     "y-quill": "0.1.5",
     "y-websocket": "1.4.0",
@@ -98,12 +99,12 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
+    "@angular-devkit/build-angular": "~14.1.0",
     "@angular-eslint/eslint-plugin": "13.1.0",
     "@angular-eslint/eslint-plugin-template": "13.1.0",
     "@angular-eslint/template-parser": "13.1.0",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.9",
+    "@angular/cli": "~14.1.0",
+    "@angular/compiler-cli": "~14.1.0",
     "@nrwl/angular": "14.4.6",
     "@nrwl/cli": "14.4.6",
     "@nrwl/cypress": "14.4.6",
