--- a/core/new-gui/angular.json
+++ b/core/new-gui/angular.json
@@ -24,8 +24,8 @@
               },
               {
                 "glob": "**/*",
-                "input": "node_modules/ngx-monaco-editor/assets/monaco",
-                "output": "./assets/monaco/"
+                "input": "node_modules/monaco-editor",
+                "output": "assets/monaco-editor"
               },
               {
                 "glob": "**/*",
@@ -39,11 +39,9 @@
               "node_modules/jointjs/css/themes/material.css",
               "node_modules/jointjs/css/themes/default.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss",
-              "node_modules/monaco-editor/min/vs/editor/editor.main.css"
+              "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/ngx-monaco-editor/assets/monaco/vs/loader.js",
               "./node_modules/marked/marked.min.js"
             ],
             "allowedCommonJsDependencies": ["deep-map", "c3", "js-abbreviation-number", "dagre", "graphlib"],
