--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -99,6 +99,7 @@
     "@babel/helper-explode-assignable-expression": "^7.18.6"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "14.1.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "@angular-devkit/build-angular": "~14.1.0",
     "@angular-eslint/eslint-plugin": "13.1.0",
@@ -155,7 +156,7 @@
     "rxjs-marbles": "7.0.1",
     "sass": "1.49.9",
     "ts-node": "4.1.0",
-    "typescript": "4.6.4",
+    "typescript": "~4.7.0",
     "webpack-bundle-analyzer": "4.5.0"
   },
   "browserslist": [
