--- a/core/new-gui/tsconfig.json
+++ b/core/new-gui/tsconfig.json
@@ -12,9 +12,9 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2019", "es2015", "dom"],
+    "lib": ["es2019", "ES2022", "dom"],
     "module": "esnext",
     "baseUrl": "./"
   },
