--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -40,7 +40,6 @@
     "@loaders.gl/core": "~3.4.2",
     "@luma.gl/core": "~8.5.20",
     "@ng-bootstrap/ng-bootstrap": "~13.1.1",
-    "bootstrap": "~5.2.3",
     "@popperjs/core": "2.11.6",
     "@ngneat/until-destroy": "8.1.4",
     "@ngx-formly/core": "5.11.1",
@@ -52,6 +51,7 @@
     "@types/plotly.js-dist-min": "^2.3.4",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
+    "bootstrap": "~5.2.3",
     "c3": "0.7.17",
     "d3": "6.7.0",
     "d3-cloud": "1.2.5",
@@ -69,8 +69,9 @@
     "lodash-es": "4.17.21",
     "mapbox-gl": "~2.15.0",
     "marked": "4.2.12",
-    "monaco-editor": "0.34.1",
-    "monaco-languageclient": "4.0.3",
+    "monaco-editor": "0.36.1",
+    "monaco-languageclient": "5.0.0",
+    "vscode": "npm:@codingame/monaco-vscode-api@~1.76.6",
     "ng-dynamic-component": "10.1.0",
     "ng-zorro-antd": "14.0.0",
     "ng2-file-upload": "1.4.0",
@@ -119,7 +120,7 @@
     "@types/jquery": "3.5.14",
     "@types/json-schema": "7.0.9",
     "@types/lodash": "4.14.179",
-    "@types/node": "16.11.7",
+    "@types/node": "~18.15.5",
     "@types/quill": "2.0.9",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.14.0",
