--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -104,6 +104,7 @@
     "@angular-eslint/template-parser": "14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "~14.1.0",
+    "@babel/helper-explode-assignable-expression": "~7.18.6",
     "@nrwl/angular": "14.4.6",
     "@nrwl/cli": "14.4.6",
     "@nrwl/cypress": "14.4.6",
