--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -77,6 +77,7 @@
     "ngx-json-viewer": "3.0.2",
     "ngx-markdown": "13.1.0",
     "path-browserify": "^1.0.1",
+    "plotly.js": "^2.28.0",
     "plotly.js-dist-min": "^2.27.1",
     "popper.js": "1.16.1",
     "quill": "1.3.7",
