--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -10,7 +10,7 @@
     "build": "ng build --configuration production --progress=false --source-map=false",
     "analyze": "ng build --configuration production --stats-json && webpack-bundle-analyzer dist/stats.json",
     "test": "ng test",
-    "test:ci": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng test --watch=false --progress=false --browsers=ChromeHeadless",
+    "test:ci": "ng test --watch=false --progress=false --browsers=ChromeHeadless",
     "prettier:fix": "prettier --write ./src",
     "lint": "ng lint",
     "eslint:fix": "yarn eslint --fix ./src",
@@ -76,7 +76,7 @@
     "ngx-json-viewer": "3.0.2",
     "ngx-markdown": "13.1.0",
     "path-browserify": "^1.0.1",
-    "plotly.js-dist-min": "^2.27.1",
+    "plotly.js-dist-min": "^2.0.0",
     "popper.js": "1.16.1",
     "quill": "1.3.7",
     "quill-cursors": "3.1.2",
