--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -47,7 +47,7 @@
     "@types/lodash-es": "4.17.4",
     "@types/mapbox-gl": "~2.7.11",
     "@types/marked": "4.0.8",
-    "@types/plotly.js-dist-min": "^2.3.4",
+    "@types/plotly.js-basic-dist-min": "^2.12.4",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
     "bootstrap": "~4.6.2",
@@ -76,7 +76,7 @@
     "ngx-json-viewer": "3.0.2",
     "ngx-markdown": "13.1.0",
     "path-browserify": "^1.0.1",
-    "plotly.js-dist-min": "^2.27.1",
+    "plotly.js-basic-dist-min": "^2.29.0",
     "popper.js": "1.16.1",
     "quill": "1.3.7",
     "quill-cursors": "3.1.2",
