revert conf changes

--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -37,7 +37,7 @@ cache {
 }
 
 user-sys {
-    enabled = true
+    enabled = false
     google{
         clientId = ""
         clientSecret = ""
@@ -56,8 +56,8 @@ result-cleanup {
 
 jdbc {
     url = "jdbc:mysql://localhost:3306/texera_db?serverTimezone=UTC"
-    username = "root"
-    password = "123456"
+    username = ""
+    password = ""
 }
 
 web-server {
