--- a/core/new-gui/src/tsconfig.spec.json
+++ b/core/new-gui/src/tsconfig.spec.json
@@ -4,5 +4,6 @@
     "outDir": "../out-tsc/spec",
     "types": ["jasmine", "node"]
   },
+  "files": ["test.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
