--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -16,21 +16,21 @@
     "eslint:fix": "yarn eslint --fix ./src",
     "format:fix": "yarn prettier-eslint --write \"src/**/*.{ts,js,html,scss,less,json}\"",
     "format:ci": "yarn prettier-eslint --list-different \"src/**/*.{ts,js,html,scss,less,json}\" && yarn eslint ./src",
-    "postinstall": "node git-version.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js"
+    "postinstall": "node git-version.js && node ./decorate-angular-cli.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.0.0",
-    "@angular/cdk": "~15.0.0",
-    "@angular/common": "~15.0.0",
-    "@angular/compiler": "~15.0.0",
-    "@angular/core": "~15.0.0",
-    "@angular/forms": "~15.0.0",
-    "@angular/localize": "~15.0.0",
-    "@angular/material": "~15.0.0",
-    "@angular/platform-browser": "~15.0.0",
-    "@angular/platform-browser-dynamic": "~15.0.0",
-    "@angular/router": "~15.0.0",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.12",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/localize": "16.2.12",
+    "@angular/material": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
     "@auth0/angular-jwt": "5.1.0",
     "@deck.gl/core": "~8.9.19",
     "@deck.gl/layers": "~8.9.19",
@@ -65,13 +65,12 @@
     "marked": "4.2.12",
     "monaco-editor": "0.36.1",
     "monaco-languageclient": "5.0.0",
-    "vscode": "npm:@codingame/monaco-vscode-api@~1.76.6",
-    "ng-dynamic-component": "10.1.0",
-    "ng-zorro-antd": "14.0.0",
-    "ng2-file-upload": "2.0.0-3",
+    "ng-dynamic-component": "10.7.0",
+    "ng-zorro-antd": "16.2.2",
+    "ng2-file-upload": "5.0.0",
     "ngx-color-picker": "12.0.1",
-    "ngx-json-viewer": "3.0.2",
-    "ngx-markdown": "13.1.0",
+    "ngx-json-viewer": "3.2.1",
+    "ngx-markdown": "16.0.0",
     "path-browserify": "^1.0.1",
     "plotly.js-basic-dist-min": "^2.29.0",
     "popper.js": "1.16.1",
@@ -82,24 +81,23 @@
     "tinyqueue": "2.0.3",
     "tslib": "2.3.1",
     "uuid": "8.3.2",
+    "vscode": "npm:@codingame/monaco-vscode-api@~1.76.6",
     "vscode-ws-jsonrpc": "3.1.0",
     "y-monaco": "0.1.5",
     "y-protocols": "1.0.5",
     "y-quill": "0.1.5",
     "y-websocket": "1.4.0",
     "yjs": "13.5.41",
-    "zone.js": "0.14.4",
-    "@babel/helper-replace-supers": "~7.18.6"
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "15.0.0",
-    "@angular-devkit/build-angular": "15.0.0",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "~15.0.0",
-    "@babel/helper-explode-assignable-expression": "~7.18.6",
+    "@angular-builders/custom-webpack": "16.0.1",
+    "@angular-devkit/build-angular": "16.2.12",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
+    "@angular/cli": "16.2.12",
+    "@angular/compiler-cli": "16.2.12",
     "@nrwl/angular": "14.4.6",
     "@nrwl/cli": "14.4.6",
     "@nrwl/nx-cloud": "16.1.1",
@@ -125,11 +123,11 @@
     "eslint-plugin-jsdoc": "46.8.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-rxjs": "5.0.2",
+    "eslint-plugin-rxjs": "5.0.3",
     "eslint-plugin-rxjs-angular": "2.0.0",
     "fs-extra": "10.0.1",
     "git-describe": "4.1.0",
-    "jasmine-core": "3.6.0",
+    "jasmine-core": "3.8.0",
     "jasmine-spec-reporter": "5.0.2",
     "karma": "6.3.17",
     "karma-chrome-launcher": "3.1.0",
@@ -144,11 +142,8 @@
     "rxjs-marbles": "7.0.1",
     "sass": "1.49.9",
     "ts-node": "4.1.0",
-    "typescript": "~4.8.2",
+    "typescript": "5.1.6",
     "webpack-bundle-analyzer": "4.5.0"
-  },
-  "resolutions": {
-    "webpack": "5.76.1"
   },
   "browserslist": [
     "defaults",
