--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -52,7 +52,7 @@
     "js-abbreviation-number": "1.4.0",
     "jszip": "3.10.1",
     "lodash-es": "4.17.21",
-    "marked": "9.0.0",
+    "marked": "^4.3.0",
     "monaco-editor": "0.36.1",
     "monaco-languageclient": "5.0.1",
     "ng-dynamic-component": "10.7.0",
@@ -64,7 +64,7 @@
     "path-browserify": "^1.0.1",
     "plotly.js-basic-dist-min": "^2.29.0",
     "popper.js": "1.16.1",
-    "quill": "1.3.7",
+    "quill": "2.0.0-rc.0",
     "quill-cursors": "3.1.2",
     "ring-buffer-ts": "1.0.3",
     "rxjs": "7.5.5",
@@ -88,9 +88,9 @@
     "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "16.2.12",
     "@angular/compiler-cli": "16.2.12",
-    "@nrwl/angular": "14.4.6",
-    "@nrwl/cli": "14.4.6",
+    "@nrwl/cli": "15.9.7",
     "@nrwl/nx-cloud": "16.1.1",
+    "@nx/angular": "18.0.4",
     "@types/backbone": "1.4.15",
     "@types/dagre": "0.7.47",
     "@types/file-saver": "2.0.5",
@@ -122,12 +122,12 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
     "nodecat": "2.0.0",
-    "nx": "14.4.6",
+    "nx": "16.10.0",
     "nz-tslint-rules": "0.901.2",
-    "prettier": "2.8.8",
-    "prettier-eslint-cli": "7.1.0",
+    "prettier": "3.2.5",
+    "prettier-eslint-cli": "8.0.1",
     "rxjs-marbles": "7.0.1",
-    "sass": "1.49.9",
+    "sass": "1.71.1",
     "ts-node": "4.1.0",
     "typescript": "5.1.6",
     "webpack-bundle-analyzer": "4.5.0"
