--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -64,7 +64,7 @@
     "path-browserify": "^1.0.1",
     "plotly.js-basic-dist-min": "^2.29.0",
     "popper.js": "1.16.1",
-    "quill": "2.0.0-rc.0",
+    "quill": "1.3.7",
     "quill-cursors": "3.1.2",
     "ring-buffer-ts": "1.0.3",
     "rxjs": "7.5.5",
@@ -131,9 +131,6 @@
     "ts-node": "4.1.0",
     "typescript": "5.1.6",
     "webpack-bundle-analyzer": "4.5.0"
-  },
-  "resolutions": {
-    "webpack": "5.76.1"
   },
   "browserslist": [
     "defaults",
