--- a/core/new-gui/package.json
+++ b/core/new-gui/package.json
@@ -10,7 +10,7 @@
     "build": "ng build --configuration=production --progress=false --source-map=false",
     "analyze": "ng build --configuration=production --stats-json && webpack-bundle-analyzer dist/stats.json",
     "test": "ng test",
-    "test:ci": "ng test --watch=false --progress=false --browsers=ChromeHeadless",
+    "test:ci": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng test --watch=false --progress=false --browsers=ChromeHeadless",
     "prettier:fix": "prettier --write ./src",
     "lint": "ng lint",
     "eslint:fix": "yarn eslint --fix ./src",
