--- a/core/amber/src/main/resources/application.conf
+++ b/core/amber/src/main/resources/application.conf
@@ -81,4 +81,10 @@ fault-tolerance {
     hdfs-storage{
         address = "0.0.0.0:9870"
     }
+
+region-plan-generator {
+    enable-cost-based-region-plan-generator = false
+    use-global-search = false
+}
+
 }
